--- a/surplus/package.json
+++ b/surplus/package.json
@@ -3,6 +3,9 @@
   "displayName": "surplus",
   "publisher": "Surplus",
   "description": "Manage tasks, track expenses, and monitor investments within VS Code",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SaqAsh/Surplus"},
   "version": "0.0.3",
   "engines": {
     "vscode": "^1.96.0"
@@ -14,14 +17,14 @@
     "onStartupFinished"
   ],
   "main": "./out/extension.js",
-  "icon": "resources/dark.svg",
+  "icon": "resources/upscaled_logo_enhanced.png",
   "contributes": {
     "viewsContainers": {
       "activitybar": [
         {
           "id": "surplus-sidebar",
           "title": "Surplus",
-          "icon": "media/surplus.svg"
+          "icon": "resources/dark.png"
         }
       ]
     },
