--- a/surplus/package.json
+++ b/surplus/package.json
@@ -49,6 +49,10 @@
         "title": "Surplus: Logout"
       },
       {
+        "command": "surplus.signup",
+        "title": "Surplus: Sign Up"
+      },
+      {
         "command": "surplus.addTask",
         "title": "Surplus: Add Task"
       },
@@ -57,8 +61,12 @@
         "title": "Surplus: Add Expense"
       },
       {
+        "command": "surplus.addStock",
+        "title": "Surplus: Add Stock"
+      },
+      {
         "command": "surplus.viewDashboard",
-        "title": "Surplus: Open Dashboard"
+        "title": "Surplus: View Dashboard"
       }
     ],
     "configuration": {
@@ -97,6 +105,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2"
   }
 }
