--- a/surplus/tsconfig.json
+++ b/surplus/tsconfig.json
@@ -1,10 +1,11 @@
 {
 	"compilerOptions": {
-		"module": "Node16",
-		"target": "ES2022",
+		"module": "commonjs",
+		"target": "ES2020",
 		"outDir": "out",
 		"lib": [
-			"ES2022"
+			"ES2020",
+			"DOM"
 		],
 		"sourceMap": true,
 		"rootDir": "src",
@@ -16,5 +17,6 @@
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	}
+	},
+	"exclude": ["node_modules", ".vscode-test"]
 }
